fixtures/corpus/errors/incomplete-date.journal
; parse-errors.test case 1: a bare year is an incomplete date.
2018
